# ai-data-analysis-agent

./: .dockerignore  .env.example  .gitignore  Readme.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  evaluation.yml
ai_agent_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai_data_analysis_agent.egg-info/: PKG-INFO  SOURCES.txt
data/example_file/: Product-Sales-Region.xlsx
data/uploaded_file/: default-session_Sales_Example.xlsx
docker/: backend.Dockerfile  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile
evaluation/: eval_harness.py  report_1783427585.json  report_1783441178.json  report_1783585727.json  report_1783587675.json  report_1783591406.json
evaluation/datasets/: excel_golden_set.jsonl  sql_golden_set.jsonl
notebooks/: 01_example_db_setup.ipynb
src/ai_data_analysis_agent/: main.py  tl.py
src/ai_data_analysis_agent/agents/: agent.py
src/ai_data_analysis_agent/api/: schemas.py
src/ai_data_analysis_agent/api/routes/: file_removal.py  file_upload.py  query.py  session.py
src/ai_data_analysis_agent/core/: answerability_checker.py  config.py  file_store.py  llm.py  logging.py  prompt.py  prompts.py  session_store.py  sql_schema_guard.py  text_utils.py
src/ai_data_analysis_agent/tools/: excel_tools.py  excel_validation.py  sql_tools.py  sql_validation.py  tools.py
src/app/: main.py
src/app/agents/: agent.py
src/app/core/: config.py  llm.py
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml
tests/: test_excel_validation.py  test_sql_validation.py
