[project]
name = "ai-data-analysis-agent"
version = "0.1.0"
description = "Production-style agentic AI system"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "langchain",
  "chromadb",
  "sqlalchemy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["app"]