[project]
name = "ai-data-analysis-agent"
version = "0.1.0"
description = "AI Data Analysis Agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "groq",
  "streamlit",
  "requests",
  "python-dotenv",
  "ipykernel>=7.3.0",
  "kagglehub>=1.0.2",
  "sqlalchemy>=2.0.50",
  "openai>=2.41.1",
  "langchain>=1.3.9",
  "langchain-core>=1.4.7",
  "langchain-groq>=1.1.3",
  "langchain-openai>=1.3.2",
  "st-flexible-callout-elements>=0.2.1",
  "sqlparse>=0.5.5",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
